adding background workers to send verification mails
