# gapi/rpc_create_user.go
@@ -2,12 +2,15 @@ package gapi
 
 import (
 	"context"
+	"time"
 
+	"github.com/hibiken/asynq"
 	"github.com/lib/pq"
 	db "github.com/souvikmndl/simplebank/db/sqlc"
 	"github.com/souvikmndl/simplebank/pb"
 	"github.com/souvikmndl/simplebank/util"
 	"github.com/souvikmndl/simplebank/val"
+	"github.com/souvikmndl/simplebank/worker"
 	"google.golang.org/genproto/googleapis/rpc/errdetails"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
@@ -25,14 +28,28 @@ func (server *Server) CreateUser(ctx context.Context, req *pb.CreateUserRequest)
 		return nil, status.Error(codes.Internal, "failed to hash password")
 	}
 
-	arg := db.CreateUserParams{
-		Username:       req.GetUsername(),
-		HashedPassword: hashedPassword,
-		FullName:       req.GetFullName(),
-		Email:          req.GetEmail(),
+	arg := db.CreateUserTxParams{
+		CreateUserParams: db.CreateUserParams{
+			Username:       req.GetUsername(),
+			HashedPassword: hashedPassword,
+			FullName:       req.GetFullName(),
+			Email:          req.GetEmail(),
+		},
+
+		AfterCreate: func(user db.User) error {
+			taskPayload := &worker.PayloadSendVerifyEmail{
+				Username: user.Username,
+			}
+			opts := []asynq.Option{
+				asynq.MaxRetry(10),
+				asynq.ProcessIn(10 * time.Second),
+				asynq.Queue(worker.QueueCritical),
+			}
+			return server.taskDistributor.DistributetaskSenderVerifyEmail(ctx, taskPayload, opts...)
+		},
 	}
 
-	user, err := server.store.CreateUser(ctx, arg)
+	createUserResult, err := server.store.CreateUserTx(ctx, arg)
 	if err != nil {
 		if pqErr, ok := err.(*pq.Error); ok {
 			switch pqErr.Code.Name() {
@@ -43,8 +60,22 @@ func (server *Server) CreateUser(ctx context.Context, req *pb.CreateUserRequest)
 		return nil, status.Errorf(codes.Internal, "failed to create user %d", err)
 	}
 
+	// send msg to background worker
+	// taskPayload := &worker.PayloadSendVerifyEmail{
+	// 	Username: user.Username,
+	// }
+	// opts := []asynq.Option{
+	// 	asynq.MaxRetry(10),
+	// 	asynq.ProcessIn(10 * time.Second),
+	// 	asynq.Queue(worker.QueueCritical),
+	// }
+	// err = server.taskDistributor.DistributetaskSenderVerifyEmail(ctx, taskPayload, opts...)
+	// if err != nil {
+	// 	return nil, status.Errorf(codes.Internal, "failed to send verification email to user %s", err)
+	// }
+
 	rsp := &pb.CreateUserResponse{
-		User: convertUser(user),
+		User: convertUser(createUserResult.User),
 	}
 
 	return rsp, nil
